=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.96

   * atoms with the name resi, but not the same resn are now considered
     to be in different residues.

   * ray_transparency_contrast setting, default=2.0, improves contrast
     of the transparent surface relative to objects inside.  
     COMPATIBILITY NOTICE: set ray_transparency_contrast=1.0 to 
     recover pre-0.96 behavior.

   * fixed save_session behavior to avoid accidental overwrites after
     opening a new session (mac & tcl GUIs)

   * active_selections setting & changes to the selection paradigm 
     in preparation for the sequence alignment tool : )

   * fixed minor bug in fitting code (faster convergence?)

   * added surface_trim_factor and surface_trim_factor settings
     in order to hard-to-tesselate peaks on the surface

   * taught PyMOL bond valences for G,A,T,C,U residues

   * greatly improved quality of the surface rendering algorithm for
     surface_quality = 2, 3, 4, etc.

   * fixed over-zealous movie security warning: no longer warns if
     there weren't any commands defined

   * surface_carve_cutoff, surface_carve_selection, surface_carve_state
     surface_clear_cutoff, surface_clear_selection, surface_clear_state
     settings, to enable sub-atomic culling of surfaces...

   * stick_transparency opengl rendering fixed

   * passive stereo GLUT support (extra-wide desktop) for Windows

   * adjusted reflectivity of interior color to better match exterior

   * minor fixes to depth_cue and ray_trace_fog control and input 

   * now uses 3X less memory when rendering surface_type=2 (meshes)

   * fixed bug in surface generation code, & treaked surface modes

   * various changes to surfacing algorithm greatly increase robustness
     when surfacing crevaces -- can now handle small(er) solvent probes.
